# onnx-c-inference-compiler

./: CMakeLists.txt
scripts/: export_mlp.py
src/: main.c
tests/: test_hello.c
